--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway">
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Playfair+Display">
+    <link rel="stylesheet" href="https://fontawesome.com/v4.7.0/get-started/?utm_source=fontawesome4.7">
+    <link rel="stylesheet" href="styles/font-awesome.css">
     <title>personal-project-html-and-css</title>
 </head>
 <body>
