--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                                     Samsung Galaxy S9
                                 </h6>
                                 <div class="stars flex-between">
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color " aria-hidden="true"></i>
+                                    <i class="fa fa-star-o star-border" aria-hidden="true"></i>
                                 </div>
                                 <h4 class="rating-text">$589.00</h4>
                             </div>
@@ -120,11 +120,11 @@
                                     Microsoft Nokia 2017
                                 </h6>
                                 <div class="stars flex-between">
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star-o star-border" aria-hidden="true"></i>
+                                    <i class="fa fa-star-o star-border" aria-hidden="true"></i>
                                 </div>
                                 <h4 class="rating-text">$345.00</h4>
                             </div>
@@ -148,11 +148,11 @@
                                     iPhone 7s - 2017
                                 </h6>
                                 <div class="stars flex-between">
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
                                 </div>
                                 <h4 class="rating-text">$1.557.00</h4>
                             </div>
@@ -176,11 +176,11 @@
                                     HTC One 2017
                                 </h6>
                                 <div class="stars flex-between">
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star-o star-border" aria-hidden="true"></i>
+                                    <i class="fa fa-star-o star-border" aria-hidden="true"></i>
                                 </div>
                                 <h4 class="rating-text">$432.00</h4>
                             </div>
@@ -317,11 +317,11 @@
                                         iWatch 7s
                                     </h6>
                                     <div class="stars flex-between">
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star-o star-border" aria-hidden="true"></i>
                                     </div>
                                     <h4 class="rating-text">$589.00</h4>
                                 </div>
@@ -345,11 +345,11 @@
                                         Samsung Google 9
                                     </h6>
                                     <div class="stars flex-between">
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star-o star-border" aria-hidden="true"></i>
                                     </div>
                                     <div class="sect-4-content-item-rating-prices flex-between">
                                         <h4 class="rating-text">$345.00</h4>
@@ -357,7 +357,6 @@
                                             <span class="hide-element">+</span><a href="#">$289.00</a>
                                         </div>
                                     </div>
-                                    
                                 </div>
                                 <div class="sect-4-content-item-buttons">
                                     <button>
@@ -384,11 +383,11 @@
                                         Philips Flying 4
                                     </h6>
                                     <div class="stars flex-between">
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
                                     </div>
                                     <h4 class="rating-text">$1.557.00</h4>
                                 </div>
@@ -412,11 +411,11 @@
                                         Apple iWatch 2015
                                     </h6>
                                     <div class="stars flex-between">
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                        <i class="fa fa-star-o star-border" aria-hidden="true"></i>
                                     </div>
                                     <h4 class="rating-text">$432.00</h4>
                                 </div>
@@ -443,11 +442,11 @@
                                     Samsung Galaxy Watch
                                 </h6>
                                 <div class="stars flex-between">
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star-o star-border" aria-hidden="true"></i>
                                 </div>
                                 <h4 class="rating-text">$589.00</h4>
                             </div>
@@ -471,11 +470,11 @@
                                     Apple iWatch 8s
                                 </h6>
                                 <div class="stars flex-between">
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star-o star-border" aria-hidden="true"></i>
                                 </div>
                                 <div class="sect-4-content-item-rating-prices flex-between">
                                     <h4 class="rating-text">$345.00</h4>
@@ -504,11 +503,11 @@
                                     Samsung Galaxy Watch
                                 </h6>
                                 <div class="stars flex-between">
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star-o star-border" aria-hidden="true"></i>
                                 </div>
                                 <div class="sect-4-content-item-rating-prices flex-between">
                                     <h4 class="rating-text">$598.00</h4>
@@ -537,11 +536,11 @@
                                     Apple iWatch 2015
                                 </h6>
                                 <div class="stars flex-between">
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star star-color" aria-hidden="true"></i>
+                                    <i class="fa fa-star-o star-border" aria-hidden="true"></i>
                                 </div>
                                 <h4 class="rating-text">$345.00</h4>
                             </div>
@@ -582,7 +581,6 @@
                         </div>
                         <div class="sect-5-items-grid-4 flex-center">
                             <p class="white">24<br> <span>Jan</span></p>
-                            
                         </div>
                         <div class="sect-5-items-grid-5 flex-center">
                             <i class="fa fa-link" aria-hidden="true"></i>
@@ -806,7 +804,7 @@
                             </p>
                             <p class="sect-7-clear-both-p">
                                 Donec mattis felis sit amet viverra elementum. 
-                                Nullam rutrum sit amet nisl eu rhoncus. Duis 
+                                Nullam rutrum sit amet nisl eu rhoncus. <br> Duis 
                                 tristique dolor magna, vitae mattis mauris 
                                 consectetur elementum. Praesent <br> pharetra lacus 
                                 at enim ornare
