fix(personal-project-html-and-css): Little bit fix

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <p class="logo-text-down">fox<span>shop</span></p>
                     </div>
                 </div>
-                <ul class="flex-between">
+                <ul id="nav-ul" class="flex-between">
                     <li><a href="#">women</a> <i class="fa fa-chevron-down nav-i" aria-hidden="true"></i></li>
                     <li><a href="#">man</a>  <i class="fa fa-chevron-down nav-i" aria-hidden="true"></i></li>
                     <li><a href="#">kids</a> <i class="fa fa-chevron-down nav-i" aria-hidden="true"></i></li>
