fix(personal-project-html-and-css): Fix some details

--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                         </div>
                         <div class="sect-5-items-grid-6">
                             <h3>Your Blog Title Here</h3>
-                            <h5>Web Design</h5>
+                            <h5 id="margin-bottom-6px">Web Design</h5>
                             <p>
                                 Donec mattis felis sit amet viverra 
                                 elementum. Nullam rutrum sit amet nisl 
